@@ -10,6 +10,7 @@ env.Program("xboxdrv", ["src/xboxdrv.cpp",
                         "src/xbox_controller.cpp",
                         "src/xbox360_controller.cpp",
                         "src/xbox360_wireless_controller.cpp",
+                        "src/evdev_helper.cpp"
                         ])
 
 if True:
