@@ -24,7 +24,7 @@
 class Xbox360Msg;
 class Xbox360GuitarMsg;
 class XboxMsg;
-
+
 class uInputCfg
 {
 public:
